# GAMM_PDFs_from_Conftool

./: .gitignore  BoA_DSP_generator.py  LICENSE.txt  README.md  RunMe.bat  RunMe.py  RunMe.sh  check_html_tags.py  get_conftool_data.py  get_conftool_data.sh  html2latex.py  pyproject.toml
CSV/: speakers.csv
LaTeX/: this-gamm.sty
LaTeX/Book_of_abstracts/: BookOfAbstracts.tex  gamm-boa.cls
LaTeX/Common/: gamm-titlepage.sty
LaTeX/Daily_Scientific_Program/: gamm-dsp.cls  room_template.tex
LaTeX/Daily_Session_Plans/: gamm-dsp.cls
