[project]
name = "gamm-boa-dsp-generator"
version = "2024.0.0"
dependencies = [
  "pandas",
  "requests",
  "datetime",
]

requires-python = ">=3.10"

authors = [
  {name = "Jens Saak", email = "saak@mpi-magdeburg.mpg.de"},
]

maintainers = [
  {name = "GAMM e.V.", email = "gamm@mailbox.tu-dresden.de"}
]

description = "PDF generator for GAMM annual meetings based on ConfTool Pro data exports. Allows to create, book of abstracts, daily scientific programm and individual room plans."

readme = "README.md"

license = {file = "COPYING"}

keywords = ["GAMM", "book of abstracts", "daily session program"]

classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]
